--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "98.css": "^0.1.21",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
